<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main_pictures"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context="com.historichologram.tucsontourguide.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_red_dark"
                android:scaleType="centerCrop"
                android:src="@drawable/red_garter" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_red_dark"
                android:scaleType="centerCrop"
                android:src="@drawable/tucson_meet_yourself" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_red_dark"
                android:scaleType="centerCrop"
                android:src="@drawable/reid_park_zoo" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/holo_red_dark"
                android:scaleType="centerCrop"
                android:src="@drawable/loft_cinema" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context="com.historichologram.tucsontourguide.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restaurants_text_view"
                style="@style/SplashText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#80D50000"
                android:gravity="center"
                android:text="@string/restuarants" />

            <TextView
                android:id="@+id/events_text_view"
                style="@style/SplashText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#8064dd17"
                android:gravity="center"
                android:text="@string/events" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cultural_text_view"
                style="@style/SplashText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#802962ff"
                android:gravity="center"
                android:text="@string/cultural"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/nightlife_text_view"
                style="@style/SplashText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#806200ea"
                android:gravity="center"
                android:text="@string/nightlife" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>